--- a/app/src/main/res/layout/user_item_for_list.xml
+++ b/app/src/main/res/layout/user_item_for_list.xml
@@ -7,6 +7,7 @@
     >
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/cardViewItemUser"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         style="@style/cardView"
