--- a/app/src/main/res/layout/info_user.xml
+++ b/app/src/main/res/layout/info_user.xml
@@ -1,92 +1,118 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools">
 
-    >
+    <data>
+        <variable
+            name="user"
+            type="com.example.userinfo.db.entity.User" />
 
+        <variable
+            name="handlerDelete"
+            type="com.example.userinfo.ui.listeners.IListenerDelete" />
 
-    <ImageView
-        android:id="@+id/imageViewAvatarUserInfoUser"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:srcCompat="@tools:sample/avatars" />
+        <variable
+            name="position"
+            type="Integer" />
 
-    <LinearLayout
-        android:id="@+id/linearLayout"
+        <variable
+            name="idUser"
+            type="Integer" />
+
+    </data>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:gravity="center"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageViewAvatarUserInfoUser">
+        android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/tvInfoUserFirstName"
+
+        <ImageView
+            android:id="@+id/imageViewAvatarUserInfoUser"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="25sp" />
+            android:layout_marginTop="5dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:avatarInfo="@{user.avatar}"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:srcCompat="@tools:sample/avatars" />
+
+        <LinearLayout
+            android:id="@+id/linearLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:gravity="center"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/imageViewAvatarUserInfoUser">
+
+            <TextView
+                android:id="@+id/tvInfoUserFirstName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@{user.firstName}"
+                android:textSize="25sp" />
+
+            <TextView
+                android:id="@+id/tvInfoUserLastName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:text="@{user.lastName}"
+                android:textSize="25sp" />
+
+        </LinearLayout>
 
         <TextView
-            android:id="@+id/tvInfoUserLastName"
+            android:id="@+id/textView3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
-            android:textSize="25sp" />
+            android:layout_marginTop="10dp"
+            android:text="@string/e_mail"
+            android:textSize="20sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
 
-    </LinearLayout>
+        <TextView
+            android:id="@+id/tvUserInfoEmail"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="10dp"
+            android:text="@{user.email}"
+            android:autoLink="email"
+            android:minHeight="48dp"
+            android:textSize="20sp"
+            app:layout_constraintStart_toEndOf="@+id/textView3"
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
 
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp"
-        android:text="@string/e_mail"
-        android:textSize="20sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
+        <ImageView
+            android:id="@+id/imageViewEditUser"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toStartOf="@+id/imageViewDeleteUser"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tvUserInfoEmail"
+            app:srcCompat="@drawable/ic_baseline_edit_24"
+            tools:srcCompat="@drawable/ic_baseline_edit_24" />
 
-    <TextView
-        android:id="@+id/tvUserInfoEmail"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp"
-        android:autoLink="email"
-        android:minHeight="48dp"
-        android:textSize="20sp"
-        app:layout_constraintStart_toEndOf="@+id/textView3"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
-
-    <ImageView
-        android:id="@+id/imageViewEditUser"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintEnd_toStartOf="@+id/imageViewDeleteUser"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvUserInfoEmail"
-        app:srcCompat="@drawable/ic_baseline_edit_24"
-        tools:srcCompat="@drawable/ic_baseline_edit_24" />
-
-    <ImageView
-        android:id="@+id/imageViewDeleteUser"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginBottom="15dp"
-        app:layout_constraintStart_toEndOf="@+id/imageViewEditUser"
-        app:layout_constraintTop_toBottomOf="@+id/tvUserInfoEmail"
-        app:srcCompat="@drawable/ic_baseline_delete_forever_24"
-        tools:srcCompat="@drawable/ic_baseline_delete_forever_24" />
+        <ImageView
+            android:id="@+id/imageViewDeleteUser"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="15dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:onClick="@{()->handlerDelete.delete(position, idUser)}"
+            app:layout_constraintStart_toEndOf="@+id/imageViewEditUser"
+            app:layout_constraintTop_toBottomOf="@+id/tvUserInfoEmail"
+            app:srcCompat="@drawable/ic_baseline_delete_forever_24"
+            tools:srcCompat="@drawable/ic_baseline_delete_forever_24" />
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
