--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -5,4 +5,11 @@
     android:background="@color/purple_500"
     android:layout_height="56dp">
 
+    <TextView
+        android:textSize="25sp"
+        android:textColor="@color/white"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="User Info" />
+
 </androidx.appcompat.widget.Toolbar>
